# config/routes.rb
@@ -19,7 +19,7 @@ Rails.application.routes.draw do
       resources :orders, only: %i[create index show]
 
       get 'products/categories/:category_id' => 'products#index', as: 'category_products'
-      get 'products/categories/:category_id/order/:by' => 'products#index', as: 'category_order'
+      get 'products/categories/:category_id/sort/:by' => 'products#index', as: 'category_order'
       get 'sort/:by' => 'products#index', as: 'sort'
     end
   end
