# swagger/v1/swagger.json
@@ -4,6 +4,12 @@
     "title": "API V1",
     "version": "v1"
   },
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
     "/api/v1/cart": {
       "get": {
@@ -571,7 +577,7 @@
             }
           },
           "404": {
-            "description": "Products not found",
+            "description": "Product not found",
             "schema": {
               "type": "object",
               "properties": {
@@ -600,7 +606,259 @@
         ],
         "responses": {
           "200": {
-            "description": "Product found",
+            "description": "Products found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "price": {
+                  "type": "decimal"
+                },
+                "short_description": {
+                  "type": "text"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Products not found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "messages": {
+                  "type": "object",
+                  "properties": {
+                    "error_key": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/sort/{sort_by}": {
+      "get": {
+        "summary": "Sort products (price_desc, price, name_desc, name)",
+        "tags": [
+          "Products"
+        ],
+        "parameters": [
+          {
+            "name": "sort_by",
+            "in": "path",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Products sort",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "price": {
+                  "type": "decimal"
+                },
+                "short_description": {
+                  "type": "text"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Products not sort",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "messages": {
+                  "type": "object",
+                  "properties": {
+                    "error_key": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/products/categories/{category_id}/sort/{sort_by}": {
+      "get": {
+        "summary": "Sort products in category (price_desc, price, name_desc, name)",
+        "tags": [
+          "Products"
+        ],
+        "parameters": [
+          {
+            "name": "category_id",
+            "in": "path",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true
+          },
+          {
+            "name": "sort_by",
+            "in": "path",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Products sorted",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "price": {
+                  "type": "decimal"
+                },
+                "short_description": {
+                  "type": "text"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Products not sorted",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "messages": {
+                  "type": "object",
+                  "properties": {
+                    "error_key": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/products?search={search}": {
+      "get": {
+        "summary": "Search products by name, model, company, brand",
+        "tags": [
+          "Products"
+        ],
+        "parameters": [
+          {
+            "name": "search",
+            "in": "path",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Products found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "price": {
+                  "type": "decimal"
+                },
+                "short_description": {
+                  "type": "text"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Products not found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "messages": {
+                  "type": "object",
+                  "properties": {
+                    "error_key": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/products/categories/{category_id}?search={search}": {
+      "get": {
+        "summary": "Search products in category by name, model, company, brand",
+        "tags": [
+          "Products"
+        ],
+        "parameters": [
+          {
+            "name": "category_id",
+            "in": "path",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true
+          },
+          {
+            "name": "search",
+            "in": "path",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Products found",
             "schema": {
               "type": "object",
               "properties": {
